# 3_automatically_classify_information

./: README.md  main.py  pyproject.toml
components/: analyse_and_clean.ipynb  training_modele.ipynb
data/: dataframe_training.parquet  merged_dataset.parquet
