[project]
name = "3_automatically_classify_information"
version = "0.1.0"
description = "Analyse des causes de démission chez TechNova Partners et modélisation SHAP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "shap>=0.45.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
